--- a/my_MBG/pom.xml
+++ b/my_MBG/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>mybatis-generator-maven-plugin</artifactId>
             <version>1.3.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.8-dmr</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -46,7 +53,14 @@
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.5</version>
                 <configuration>
-                    <jdbcDriver></jdbcDriver>
+                    <jdbcDriver>com.mysql.cj.jdbc.Driver</jdbcDriver>
+                    <jdbcURL>jdbc:mysql://localhost:3306/babyduncan</jdbcURL>
+                    <jdbcUserId>root</jdbcUserId>
+                    <jdbcPassword>Zgh5506062001!</jdbcPassword>
+                    <outputDirectory>src/main/java/dao</outputDirectory>
+                    <tableNames>student</tableNames>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
                 </configuration>
                 <executions>
                     <execution>
