--- a/my_MBG/pom.xml
+++ b/my_MBG/pom.xml
@@ -105,6 +105,7 @@
                     <tableNames>student</tableNames>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
+                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
